fix: address all PR #10 review issues for release readiness
This commit addresses all CRITICAL, MAJOR, MINOR, and NITPICK issues
identified in PR #10 review to prepare the codebase for release.

## CRITICAL Fixes
- Add btree_gin PostgreSQL extension for JSONB indexing
- Update intelligence_adapter contract payload_module paths
- Create pattern_assembler_orchestrator error_codes.py (PAO_001-008)
- Return typed ModelPatternMatchingOutput instead of ad-hoc dict

## MAJOR Fixes
- Replace dict[str, Any] with typed models across all nodes
- Fix network definition conflict in docker-compose.nodes.yml
- Fix circuit breaker to not trip on serialization errors
- Consolidate log_sanitizer with legacy re-export module
- Fix output models to match contract schemas (qdrant, memgraph, ingestion)
- Add version enforcement in contract_validator
- Remove redundant error type extraction in intelligence_adapter

## MINOR Fixes
- Update migration doc checklist with all node artifacts
- Convert TODO placeholders to tracked Future Enhancements
- Add min_length validation to content/path fields
- Fix example_usage.py processing_time access and imports
- Improve health checks with start_period and proper shutdown

## NITPICK Fixes
- Add UUID pattern validation to correlation_id fields
- Replace datetime.utcnow with datetime.now(timezone.utc)
- Sort __all__ lists alphabetically
- Convert Dict/List to dict/list (Python 3.9+ style)
- Fix health server async patterns and shutdown
- Remove dead code and unused variables
- Add cross-field validators for batch outputs
- Fix fixture docstrings for accuracy

## New Files
- src/omniintelligence/_legacy/ (backwards compatibility)
- models/error_codes.py (pattern assembler error codes)
- tests/nodes/test_vectorization_models.py (21 new tests)

51 files changed, ~1685 insertions, ~418 deletions

--- a/deployment/docker/docker-compose.nodes.yml
+++ b/deployment/docker/docker-compose.nodes.yml
@@ -297,11 +297,16 @@ services:
 # =============================================================================
 # Network Configuration
 # =============================================================================
-# This compose file uses the external network created by docker-compose.yml
-# The fully-qualified name is: {project_name}_{network_name} = omniintelligence_omni-network
-# This avoids duplicate network definitions and ensures all services share the same network
+# This compose file inherits the 'omni-network' definition from docker-compose.yml
+# when used together: docker compose -f docker-compose.yml -f docker-compose.nodes.yml up -d
+#
+# The network is defined in the base compose file with:
+#   - driver: bridge
+#   - subnet: 172.28.0.0/16
+#
+# Services in this file reference 'omni-network' by name and Docker Compose
+# automatically merges the network definition from the base file.
 # =============================================================================
-networks:
-  omni-network:
-    external: true
-    name: omniintelligence_omni-network
+# NOTE: No 'networks:' section needed here - it would conflict with the base file's
+# network definition. The services' 'networks: [omni-network]' references are
+# resolved from the base compose file during merge.
