--- a/src/omniintelligence/nodes/ingestion_effect/contract.yaml
+++ b/src/omniintelligence/nodes/ingestion_effect/contract.yaml
@@ -52,7 +52,7 @@ metadata:
   author: "OmniNode Team"
   created: "2025-11-14"
   updated: "2026-01-18"
-  status: "stub"
+  # NOTE: status field is at root level (line 17), not duplicated here
   tags:
     - "ONEX"
     - "effect"
