--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,10 @@ ruff = ">=0.12.5"
 mypy = ">=1.17.0"
 black = ">=24.10.0"
 isort = ">=5.13.0"
+types-PyYAML = ">=6.0.0"
+requests = ">=2.31.0"
+factory-boy = ">=3.3.0"
+pre-commit = ">=4.5.0"
 
 [tool.poetry.group.core.dependencies]
 omnibase-core = "^0.7.0"
