--- a/src/omniintelligence/nodes/vectorization_compute/contract.yaml
+++ b/src/omniintelligence/nodes/vectorization_compute/contract.yaml
@@ -28,10 +28,27 @@ output_model:
   description: "Output containing generated embeddings and model information."
 # Operations
 # ==========
-# Note: Both single and batch operations use the same model fields.
+# Both single and batch operations use the same model fields with CONSISTENT structure.
 # Batch mode is controlled by the `batch_mode` boolean flag in input.
-# When batch_mode=true, content should contain newline-separated items
-# and embeddings output will be a flattened list of all embedding values.
+# When batch_mode=true, content should contain newline-separated items.
+#
+# Output Structure (CONSISTENT for both modes):
+#   - embeddings: list[list[float]] - List of embedding vectors
+#     - Single mode: [[0.1, 0.2, ...]] (one vector in list)
+#     - Batch mode: [[0.1, ...], [0.2, ...]] (N vectors in list)
+#   - batch_count: int - Number of vectors in embeddings list
+#   - embedding_dimension: int - Dimension of each vector
+#
+# This design ensures:
+#   - Same access pattern for both modes: `for emb in output.embeddings`
+#   - No flattening/parsing required
+#   - Self-describing output structure
+#
+# Failed operations:
+#   - success: false
+#   - embeddings: [] (empty list)
+#   - batch_count: 0
+#   - embedding_dimension: 0
 operations:
   - name: "vectorize"
     description: "Generate embeddings for content (single or batch based on batch_mode flag)"
@@ -49,13 +66,22 @@ operations:
       - metadata
 # Dependencies
 # ============
-# TODO(ONEX-EMBED-001): Create omniintelligence.protocols module with embedding model protocol
-# - Create protocols/ directory with EmbeddingModelProtocol
-# - Define interface for embedding generation (encode, batch_encode, get_dimension)
-# - Currently no protocols directory exists - this is a placeholder for future implementation
-# - Tracked in: https://linear.app/omninode/issue/ONEX-EMBED-001 (placeholder)
+# Current: No external protocol dependencies (uses internal embedding implementation)
+#
+# Future Enhancement (ONEX-EMBED-001):
+# ------------------------------------
+# Status: Planned - Not yet implemented
+# Priority: Low (current implementation functional without protocol abstraction)
+# Description: Create omniintelligence.protocols module with EmbeddingModelProtocol
+# Requirements:
+#   - Create protocols/ directory with EmbeddingModelProtocol
+#   - Define interface for embedding generation (encode, batch_encode, get_dimension)
+#   - Currently no protocols directory exists
+# Tracking: https://github.com/OmniNode-ai/omniintelligence/issues (to be created)
+# Reference: See MIGRATION_SUMMARY.md for protocol migration patterns
 #
 dependencies: []
+# Future dependency (when ONEX-EMBED-001 is implemented):
 # - name: "embedding_model"
 #   type: "protocol"
 #   module: "omniintelligence.protocols"
