fix: address remaining PR #10 review issues and fix CI failures
CI Failures Fixed:
- Fix YAML formatting (yamlfmt) in docker-compose.yml and contract.yaml
- Sort __all__ lists (ruff RUF022) in tools and utils modules
- Make omnibase_core import optional to fix test collection errors
- Add pytest.importorskip() to contract linter tests
- Add test_tools_import.py for basic import tests

Type Safety Improvements:
- Replace dict[str, Any] with typed models across compute/effect nodes
- Add TypedDict definitions for metadata and context fields
- Use UUID typing for correlation_id fields
- Add enum types for fsm_type and operation fields

Contract Updates:
- Add error_code fields to all 16 node contracts
- Track TODO placeholders with migration doc references
- Fix description formatting for yamlfmt compliance

Node Implementations:
- Update effect nodes to return typed output models
- Remove redundant __init__ methods from compute nodes
- Add health conditions to docker-compose depends_on

Documentation:
- Update ONEX_MIGRATION_PLAN.md node inventory
- Fix deprecated datetime.utcnow() usage in examples
- Correct relative paths to migration docs

Legacy Code:
- Add Pydantic Settings for log sanitizer configuration
- Align deprecation guidance with warning text
- Fix type ignore for BaseSettings subclass

--- a/src/omniintelligence/nodes/context_keyword_extractor_compute/contract.yaml
+++ b/src/omniintelligence/nodes/context_keyword_extractor_compute/contract.yaml
@@ -35,8 +35,13 @@ operations:
       - success
       - keywords
       - keyword_contexts
-# TODO: Create omniintelligence.protocols module with keyword extractor protocol
+# Protocol Dependencies (Future)
+# ==============================
+# Status: Backlog - Phase 3 (v0.4.0)
+# When implementing full functionality, a keyword extractor protocol will be needed.
+# Tracked: docs/migrations/omniarchon_to_omniintelligence.md (Phase 3 - Protocols)
 dependencies: []
+# Future protocol dependency (uncomment when protocols module exists):
 # - name: "keyword_extractor"
 #   type: "protocol"
 #   module: "omniintelligence.protocols"
@@ -46,10 +51,12 @@ dependencies: []
 error_handling:
   error_types:
     - name: "KeywordExtractionValidationError"
+      error_code: "KEYWORD_001"
       description: "Input validation failed (e.g., empty content)"
       recoverable: false
       retry_strategy: "none"
     - name: "KeywordExtractionComputeError"
+      error_code: "KEYWORD_002"
       description: "Error during keyword extraction"
       recoverable: true
       retry_strategy: "immediate_retry"
