--- a/deployment/docker/docker-compose.nodes.yml
+++ b/deployment/docker/docker-compose.nodes.yml
@@ -89,8 +89,10 @@ services:
     networks:
       - omni-network
     depends_on:
-      - intelligence-reducer
-      - valkey
+      intelligence-reducer:
+        condition: service_healthy
+      valkey:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
@@ -128,7 +130,8 @@ services:
     networks:
       - omni-network
     depends_on:
-      - valkey
+      valkey:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
