--- a/src/omniintelligence/nodes/ingestion_effect/contract.yaml
+++ b/src/omniintelligence/nodes/ingestion_effect/contract.yaml
@@ -33,14 +33,17 @@ dependencies: []
 error_handling:
   error_types:
     - name: "IngestionValidationError"
+      error_code: "INGEST_001"
       description: "Input validation failed (e.g., invalid source path)"
       recoverable: false
       retry_strategy: "none"
     - name: "IngestionEffectError"
+      error_code: "INGEST_002"
       description: "Error during file ingestion"
       recoverable: true
       retry_strategy: "exponential_backoff"
     - name: "FileNotFoundError"
+      error_code: "INGEST_003"
       description: "Source file not found"
       recoverable: false
       retry_strategy: "none"
